# cuda_algorithm

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  run.sh
script/: metrics  ncu.sh  ncu_nsys_env.sh
src/: main.cu  makefile  report1.nsys-rep  report1.sqlite  todo
src/graph/: bfs_hops.cuh  bfs_hops_async.cu  bfs_hops_async_update.cu  bfs_hops_async_update_o1.cu  bfs_hops_async_update_o1.cu.err  bfs_hops_async_update_o2.cu  bfs_hops_async_update_o3.cu  bfs_hops_cpu.cu  bfs_hops_fusion.cu  bfs_hops_fusion_o1.cu  bfs_hops_fusion_o2.cu  bfs_hops_gpu.cu  graph_utils.cu  graph_utils.cuh  log  main.cu  makefile  readme  run_bfs_test.sh
src/include/: matmul_tiling copy.cu  matrix_mul.h
src/matmul/: CMakeLists.txt  makefile  matmul.cuh  matmul_bank.cu  matmul_cpu.cu  matmul_cublas.cu  matmul_gpu_base.cu  matmul_mul_tiling.cu  matmul_prefetch.cu  matmul_tiling.cu  matmul_tiling_register.cu  matrix_mul.cu
